[project]
name = "scann"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "pdbpp>=0.11.6",
    "pytest>=8.3.5",
]
